--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,18 +12,17 @@ dependencies:
   flutter:
     sdk: flutter
 
-  cupertino_icons: ^1.0.2
-  path_provider: ^2.0.2
-  sqflite: ^2.0.0+3
-  flutter_html: ^2.1.0
+  cupertino_icons: ^1.0.4
+  path_provider: ^2.0.9
+  sqflite: ^2.0.2
+  flutter_html: ^2.2.1
   share: ^2.0.4
   clipboard: ^0.1.3
-  assets_audio_player: ^3.0.3+6
-  shared_preferences: ^2.0.6
-  o_color_picker: ^1.0.1
-  scrollable_positioned_list: ^0.2.0-nullsafety.0
-  rolling_nav_bar: ^0.0.4
-  persistent_bottom_nav_bar: ^4.0.2
+  assets_audio_player: ^3.0.4+1
+  shared_preferences: ^2.0.13
+  scrollable_positioned_list: ^0.2.3
+  provider: ^6.0.2
+  o_color_picker: ^1.0.2
 
 dev_dependencies:
   flutter_test:
