--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,40 +1,42 @@
 name: supplications_from_quran
 description: Supplications from Quran
 
-publish_to: 'none' # Remove this line if you wish to publish to pub.dev
+publish_to: 'none'
 
 version: 1.0.0+1
 
 environment:
-  sdk: ">=2.12.0 <3.0.0"
+  sdk: ">=2.17.6 <3.0.0"
 
 dependencies:
   flutter:
     sdk: flutter
 
-  cupertino_icons: ^1.0.4
-  path_provider: ^2.0.9
-  sqflite: ^2.0.2
+  cupertino_icons: ^1.0.5
+  path_provider: ^2.0.11
+  path: ^1.8.2
+  sqflite: ^2.1.0
   flutter_html: ^2.2.1
-  share: ^2.0.4
+  share_plus: ^4.3.0
   clipboard: ^0.1.3
-  assets_audio_player: ^3.0.4+1
-  shared_preferences: ^2.0.13
-  scrollable_positioned_list: ^0.2.3
-  provider: ^6.0.2
-  o_color_picker: ^1.0.2
+  scrollable_positioned_list: ^0.3.4
+  provider: ^6.0.3
+  flutter_colorpicker: ^1.0.3
+  just_audio: ^0.9.29
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+
+  flutter_lints: ^2.0.1
 
 flutter:
 
   uses-material-design: true
 
   assets:
-  - assets/audios/
   - assets/databases/
+  - assets/audios/
   fonts:
     - family: Gilroy
       fonts:
