--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,12 +17,13 @@ dependencies:
   path: ^1.8.2
   sqflite: ^2.1.0
   flutter_html: ^2.2.1
-  share_plus: ^4.3.0
+  share_plus: ^4.4.0
   clipboard: ^0.1.3
   scrollable_positioned_list: ^0.3.4
   provider: ^6.0.3
   flutter_colorpicker: ^1.0.3
   just_audio: ^0.9.29
+  smooth_page_indicator: ^1.0.0+2
 
 dev_dependencies:
   flutter_test:
