--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -43,8 +43,9 @@ android {
 
     defaultConfig {
         // TODO: Specify your own unique Application ID (https://developer.android.com/studio/build/application-id.html).
-        applicationId "jmapps.supplications_from_quran"
-        minSdkVersion flutter.minSdkVersion
+        applicationId "jmapps.supplicationsfromquran"
+        compileSdkVersion 32
+        minSdkVersion 21
         targetSdkVersion flutter.targetSdkVersion
         versionCode flutterVersionCode.toInteger()
         versionName flutterVersionName
