--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,6 +25,8 @@ dependencies:
   smooth_page_indicator: ^1.0.0+2
   just_audio: ^0.9.29
   screenshot: ^1.2.3
+  hive: ^2.2.3
+  hive_flutter: ^1.1.0
 
 dev_dependencies:
   flutter_test:
