--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,6 +13,15 @@ dependencies:
     sdk: flutter
 
   cupertino_icons: ^1.0.5
+  hive_flutter: ^1.1.0
+  sqflite: ^2.3.0
+  path: ^1.8.3
+  path_provider: ^2.1.0
+  smooth_page_indicator: ^1.1.0
+  provider: ^6.0.5
+  flutter_material_color_picker: ^1.2.0
+  responsive_builder: ^0.7.0
+  wakelock_plus: ^1.1.1
 
 dev_dependencies:
   flutter_test:
