--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,6 +11,8 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  flutter_localizations:
+    sdk: flutter
 
   cupertino_icons: ^1.0.5
   hive_flutter: ^1.1.0
@@ -22,6 +24,7 @@ dependencies:
   flutter_material_color_picker: ^1.2.0
   responsive_builder: ^0.7.0
   wakelock_plus: ^1.1.1
+  intl: ^0.18.1
 
 dev_dependencies:
   flutter_test:
@@ -30,5 +33,6 @@ dev_dependencies:
   flutter_lints: ^2.0.2
 
 flutter:
-
   uses-material-design: true
+  generate: true
+
