--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -8,6 +8,16 @@
 	<string>$(DEVELOPMENT_LANGUAGE)</string>
 	<key>CFBundleDisplayName</key>
 	<string>Мольбы</string>
+	<key>CFBundleLocalizations</key>
+  <array>
+  	<string>ru</string>
+  	<string>en</string>
+  	<string>az</string>
+  	<string>tr</string>
+  	<string>uz</string>
+  	<string>kk</string>
+  	<string>id</string>
+  </array>
 	<key>CFBundleExecutable</key>
 	<string>$(EXECUTABLE_NAME)</string>
 	<key>CFBundleIdentifier</key>
