--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,29 +14,29 @@ dependencies:
   flutter_localizations:
     sdk: flutter
 
-  cupertino_icons: ^1.0.5
+  cupertino_icons: ^1.0.8
   hive_flutter: ^2.0.0-dev
-  sqflite: ^2.3.0
+  sqflite: ^2.3.3+1
   path: ^1.8.3
-  path_provider: ^2.1.0
+  path_provider: ^2.1.3
   smooth_page_indicator: ^1.1.0
-  provider: ^6.0.5
+  provider: ^6.1.2
   flutter_material_color_picker: ^1.2.0
   responsive_builder: ^0.7.0
-  wakelock_plus: ^1.1.1
+  wakelock_plus: ^1.2.5
   intl: ^0.18.1
   salomon_bottom_bar: ^3.3.2
-  share_plus: ^7.1.0
+  share_plus: ^9.0.0
   clipboard: ^0.1.3
-  just_audio: ^0.9.34
-  screenshot: ^2.1.0
+  just_audio: ^0.9.37
+  screenshot: ^2.3.0
   scrollable_positioned_list: ^0.3.8
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
 
-  flutter_lints: ^2.0.2
+  flutter_lints: ^3.0.2
 
 flutter:
   uses-material-design: true
@@ -54,10 +54,9 @@ flutter:
     - family: Gilroy
       fonts:
         - asset: assets/fonts/gilroy_medium.ttf
-    - family: Nexa
+    - family: Raleway
       fonts:
-        - asset: assets/fonts/nexa_reqular.ttf
-
+        - asset: assets/fonts/raleway_regular.ttf
     - family: Uthmani
       fonts:
         - asset: assets/fonts/uthmani.ttf
