--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -6,7 +6,7 @@ publish_to: 'none'
 version: 1.0.0+1
 
 environment:
-  sdk: '>=3.1.0 <4.0.0'
+  sdk: '>=3.3.0 <4.0.0'
 
 dependencies:
   flutter:
@@ -16,20 +16,20 @@ dependencies:
 
   cupertino_icons: ^1.0.8
   hive_flutter: ^2.0.0-dev
-  sqflite: ^2.3.3+1
-  path: ^1.8.3
-  path_provider: ^2.1.3
-  smooth_page_indicator: ^1.1.0
+  sqflite: ^2.4.1
+  path: ^1.9.0
+  path_provider: ^2.1.5
+  smooth_page_indicator: ^1.2.0+3
   provider: ^6.1.2
   flutter_material_color_picker: ^1.2.0
-  responsive_builder: ^0.7.0
-  wakelock_plus: ^1.2.5
-  intl: ^0.18.1
+  responsive_builder: ^0.7.1
+  wakelock_plus: ^1.2.8
+  intl: ^0.19.0
   salomon_bottom_bar: ^3.3.2
-  share_plus: ^9.0.0
+  share_plus: ^10.1.2
   clipboard: ^0.1.3
-  just_audio: ^0.9.37
-  screenshot: ^2.3.0
+  just_audio: ^0.9.42
+  screenshot: ^3.0.0
   scrollable_positioned_list: ^0.3.8
 
 dev_dependencies:
