New Android and iOS version

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -14,26 +14,32 @@ if (localPropertiesFile.exists()) {
 
 def flutterVersionCode = localProperties.getProperty('flutter.versionCode')
 if (flutterVersionCode == null) {
-  flutterVersionCode = '13'
+  flutterVersionCode = '14'
 }
 
 def flutterVersionName = localProperties.getProperty('flutter.versionName')
 if (flutterVersionName == null) {
-  flutterVersionName = '2.2.1'
+  flutterVersionName = '2.3.0'
 }
 
 android {
   namespace "com.example.supplications_from_quran"
-  compileSdk 34
+  compileSdk 35
   ndkVersion flutter.ndkVersion
 
+  ndkVersion "27.0.12077973"
+
   compileOptions {
-    sourceCompatibility JavaVersion.VERSION_1_8
-    targetCompatibility JavaVersion.VERSION_1_8
+    sourceCompatibility JavaVersion.VERSION_11
+    targetCompatibility JavaVersion.VERSION_11
+  }
+
+  buildFeatures {
+    buildConfig = true
   }
 
   kotlinOptions {
-    jvmTarget = '1.8'
+    jvmTarget = '11'
   }
 
   sourceSets {
@@ -42,9 +48,9 @@ android {
 
   defaultConfig {
     applicationId "jmapps.supplicationsfromquran"
-    compileSdk 34
+    compileSdk 35
     minSdkVersion 21
-    targetSdk 33
+    targetSdk 35
     versionCode flutterVersionCode.toInteger()
     versionName flutterVersionName
   }
